src/main/java/org/example/mobble/_util/error/ex/ExceptionApi400.java
package org.example.mobble._util.error.ex;

public class ExceptionApi400 extends RuntimeException {
    public ExceptionApi400(String message) {
        super(message);
    }
}
